# AccessibilityProjectmanagement

./: .gitignore  .~lock.Purchase_Needs_Adaptive_Switches_with_inventory.csv#  AUDIT20260524.md  AUDIT_REPORT.md  CHANGES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Containerfile  NextStep.json  NextStep_Continuation.json  Purchase_Needs_Adaptive_Switches_with_inventory.csv  README.md  RELEASING.md  SECURITY.md  STYLE.md  build_linux.sh  build_macos.sh  build_windows.bat  implementation_outline.json  mkdocs.yml  podman-compose.yml  preferences.cfg  prompt.json  pyproject.toml  remediation.json  requirements-docs.txt  run.bat  run.sh  students.py  tools.ini  tools.ini.example
.github/workflows/: docs.yml
.prompts/: recommended_improvements.json
.prompts/task-context/: spec.json
.prompts/task-contexts/: specs.md
accessibility_mgr/: .gitignore  __init__.py  app.py  app.py.back2  app.py.back3  app.py.back4  app_TUI.py  project_manager.db  requirements.txt  run.bat  run.sh
accessibility_mgr/api/: __init__.py  platform_api.py  rest_api.py
accessibility_mgr/db/: __init__.py  database.py  queries.py  queries.py.back  queries.py.back2  queries.py.back3  queries.py.back4  queries.py.back5  queries.py.back6  queries.py.back7  schema.py  schema.py.back2  schema.py.back3  schema.py.back4  seed_import.py  seed_import.py.back3
accessibility_mgr/integrations/: cicd_hooks.py
accessibility_mgr/models/: __init__.py  assets.py  inventory.py
accessibility_mgr/security/: __init__.py  authentication.py  secret_vault.py  tenant_rbac.py
accessibility_mgr/services/: __init__.py  analytics.py  artifact_retention.py  assets_service.py  audit_log.py  auth_service.py  auth_service.py.back2  authentication.py  automation_service.py  backup_service.py  backup_service.py.back2  compliance_reporting.py  distributed_queue.py  distributed_workers.py  epub_qa.py  event_stream.py  event_streaming.py  execution_service.py  file_ingestion_service.py  inventory_service.py  metadata_audit.py  metadata_schema_service.py  metadata_validation.py  migrations.py  multi_tenant.py  notification_service.py  package_service.py  persistent_analytics.py  persistent_provenance.py  persistent_qa.py  persistent_queue.py  pipeline_service.py  preservation_service.py  production_service.py  production_toolchain.py  provenance_registry.py  qa_persistence.py  qa_service.py  rbac.py  resource_monitor.py  (+16 more)
accessibility_mgr/ui/: __init__.py  admin.py  asset_detail.py  assets.py  authentication.py  automation.py  binary_integrations_dashboard.py  braille_jobs.py  braille_jobs.py.back  braille_jobs.py.back2  braille_jobs.py.back3  braille_jobs.py.back4  braille_jobs.py.back5  braille_jobs.py.back6  categories.py  cicd_dashboard.py  components.py  dashboard.py  dashboard.py.back  dashboard.py.back2  delivery_dialog.py  ingestion.py  inventory.py  inventory_panels.py  inventory_panels.py.back  inventory_panels.py.back2  job_components.py  job_components.py.back  layout.py  lineage.py  lp_ebraille.py  lp_ebraille.py.back2  lp_ebraille.py.back3  lp_ebraille.py.back4  lp_ebraille.py.back5  lp_ebraille.py.back6  metadata_editor.py  metadata_options.py  operations_dashboard.py  pipelines.py  (+28 more)
accessibility_mgr/ui/modals/: __init__.py
accessibility_mgr/ui/panels/: __init__.py
docs/: AUDIT.md  IMPLEMENTATION_PLAN.md  NextStep_Continuation.json  changelog.md  index.md  license.md  overview.md
docs/administration/: api.md  backup-restore.md  categories.md  index.md  migration.md  performance.md  printers-embossers.md  security.md  tenants.md  users-roles.md
docs/development/: code-structure.md  custom-fields.md  custom-workflows.md  debugging.md  index.md  local-dev.md  plugins.md  test-cases.md
docs/getting-started/: configuration.md  first-steps.md  index.md  installation.md
docs/operations/: deployment.md  index.md  monitoring.md  scaling.md
docs/project/: contributors.md  index.md  release-process.md  roadmap.md
docs/reference/: api.md  app.md  architecture-decisions.md  data-flow.md  database.md  environment-variables.md  error-codes.md  glossary.md  index.md  keyboard-shortcuts.md  models.md  security.md  services.md  ui.md
docs/support/: contact.md  faq.md  index.md  troubleshooting.md
docs/user-guide/: dashboard.md  dashboard.py  index.md  lineage-viewer.md  quick-create.md  search.md
docs/user-guide/workflows/: 3d-print.md  braille.md  ebraille.md  epub-daisy.md  index.md  large-print.md  overview.md  pipelines.md  students.md  tactile-graphics.md
tests/: test_queries.py  test_queries.py.back  test_queries.py.back2
