[project]
name = "accessible-materials-project-management"
version = "2026.6.9"
description = "Accessibility-focused production management for braille, large-print, eBraille, and 3-D printing workflows"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [
    { name = "Michael Ryan Hunsaker, M.Ed., Ph.D.", email = "github@mail.hunsakerweb.com" },
]
keywords = ["braille", "3d-printing", "inventory", "nicegui", "project-management", "accessibility"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Utilities",
]

dependencies = [
    "nicegui>=1.4.0",
    "textual>=0.80.0",
    "sqlalchemy>=2.0.0",
    "cryptography>=42.0.0",
    "tox>=4.30.3",
]

[project.scripts]
AccessMan = "accessibility_mgr.app:main"
AccessMan-seed = "accessibility_mgr.db.seed_import:main"

[project.urls]
Homepage  = "https://github.com/mrhunsaker/accessible-materials-manager"
Issues    = "https://github.com/mrhunsaker/accessible-materials-manager/issues"
Discussions = "https://github.com/mrhunsaker/accessible-materials-manager/discussions"
Changelog = "https://github.com/mrhunsaker/accessible-materials-manager/RELEASING.md"

# Dev dependencies — managed here (uv-canonical).
# Do not duplicate in [project.optional-dependencies].
[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4.0",
    "mypy>=1.9",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.25.0",
    "mkdocs-autorefs>=1.4.0",
    "pymdown-extensions>=10.7.0",
]

# ── Build ─────────────────────────────────────────────────────────────────────
[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["accessibility_mgr"]

# ── Ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length    = 99
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["accessibility_mgr"]

# ── Mypy ──────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version         = "3.12"
strict                 = false
ignore_missing_imports = true
warn_unused_ignores    = true
warn_return_any        = true

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
